--- a/index.html
+++ b/index.html
@@ -10,8 +10,50 @@
 	
 </head>
 <body>
+	<header>
+		<h1>Webpage</h1>
+		<img src="img/logo.gif" alt="gif">
+		<img src="img/logo8.png" alt="png8">
+		<img src="img/logo24.png" alt="png24">
+  		<img src="img/logo.jpg" alt="jpghigh">
+  	</header>
 
-	<h1>My Website</h1>
-  
+  	<nav>
+  		<ul>
+  			<li><a href="">main</a></li>
+  			<li><a href="">main</a></li>
+  			<li><a href="">main</a></li>
+  		</ul>
+  	</nav>
+
+  	<article>
+  		<section>
+  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  			</p>
+  		</section>
+
+  		  <section>
+  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  			</p>
+  		</section>
+
+  		<aside>
+	  		<ul>
+	  			<li><a href="">main</a>side</li>
+	  			<li><a href="">main</a>side</li>
+	  			<li><a href="">main</a>side</li>
+	  		</ul>
+  		</aside>
+
+  		<footer>
+  			<p>copyright 2013</p>
+  		</footer>
+
+  	</article>
+
 </body>
 </html>
