--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
   		<aside>
 	  		<ul>
-	  			<li><a href="">main</a>side</li>
-	  			<li><a href="">main</a>side</li>
-	  			<li><a href="">main</a>side</li>
+	  			<li><a href="">side</a></li>
+	  			<li><a href="">side</a></li>
+	  			<li><a href="">side</a></li>
 	  		</ul>
   		</aside>
 
