--- a/index.html
+++ b/index.html
@@ -10,50 +10,49 @@
 	
 </head>
 <body>
-	<header>
-		<h1>Webpage</h1>
-		<img src="img/logo.gif" alt="gif">
-		<img src="img/logo8.png" alt="png8">
-		<img src="img/logo24.png" alt="png24">
-  		<img src="img/logo.jpg" alt="jpghigh">
-  	</header>
 
-  	<nav>
-  		<ul>
-  			<li><a href="">main</a></li>
-  			<li><a href="">main</a></li>
-  			<li><a href="">main</a></li>
-  		</ul>
-  	</nav>
+	<div class="container">
+		<header class="grid_3">
+			<h1>Webpage</h1>
+			<img src="img/logo24.png" alt="png24">
+	  	</header>
 
-  	<article>
-  		<section>
-  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  			</p>
-  		</section>
-
-  		  <section>
-  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  			</p>
-  		</section>
-
-  		<aside>
+	  	<nav class="grid_9 omega">
 	  		<ul>
-	  			<li><a href="">side</a></li>
-	  			<li><a href="">side</a></li>
-	  			<li><a href="">side</a></li>
+	  			<li><a href="">main</a></li>
+	  			<li><a href="">main</a></li>
+	  			<li><a href="">main</a></li>
 	  		</ul>
-  		</aside>
+	  	</nav>
 
-  		<footer>
-  			<p>copyright 2013</p>
-  		</footer>
+	  	<article class="grid_12">
+	  		<section class="grid_4 alpha">
+	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  			</p>
+	  		</section>
 
-  	</article>
+	  		  <section class="grid_4 omega">
+	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	  			</p>
+	  		</section>
 
+	  		<aside class="grid_4">
+		  		<ul>
+		  			<li><a href="">side</a></li>
+		  			<li><a href="">side</a></li>
+		  			<li><a href="">side</a></li>
+		  		</ul>
+	  		</aside>
+
+	  		<footer class="grid_12">
+	  			<p>copyright 2013</p>
+	  		</footer>
+
+	  	</article>
+  </div>
 </body>
 </html>
