--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Document</title>
 	
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="css/grid.css">
+  <link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>				
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -49,7 +50,7 @@
 	  		</aside>
 
 	  		<footer class="grid_12">
-	  			<p>copyright 2013</p>
+	  			<p>copyright &#169; 2014</p>
 	  		</footer>
 
 	  	</article>
