--- a/index.html
+++ b/index.html
@@ -2,58 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Document</title>
+  <title>Midterm Refresh</title>
 	
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">
-  <link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>				
-  <link rel="stylesheet" href="css/styles.css">	
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/styles.css">
 	
 </head>
 <body>
+	
+<div class="container showgrid">
 
-	<div class="container">
-		<header class="grid_3">
-			<h1>Webpage</h1>
-			<img src="img/logo24.png" alt="png24">
-	  	</header>
+	<header class="grid_3 alpha">
+		<img src="img/logo-24.png" alt="">
+	</header>
 
-	  	<nav class="grid_9 omega">
-	  		<ul>
-	  			<li><a href="">main</a></li>
-	  			<li><a href="">main</a></li>
-	  			<li><a href="">main</a></li>
-	  		</ul>
-	  	</nav>
+	<nav class="grid_9 omega">
+		<ul>
+		  <li id="first"><a href="#">Link A</a></li>
+		  <li id="second"><a href="#">Link B</a></li>
+		  <li id="third"><a href="#">Link C</a></li>
+		</ul>						
+	</nav>		
+  
+	<article class="grid_12">
+		
+		<section class="grid_4 alpha">
+			<h3>Section A</h3>
+			
+			<p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </em></p>
 
-	  	<article class="grid_12">
-	  		<section class="grid_4 alpha">
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  			</p>
-	  		</section>
+			<p>Tenetur, distinctio, eos placeat mollitia deserunt natus molestiae fugiat dolore veritatis fugit non nisi perspiciatis nihil in accusantium harum quod quidem temporibus!</p>
 
-	  		  <section class="grid_4 omega">
-	  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  			</p>
-	  		</section>
+			<p>Tenetur, distinctio, eos placeat mollitia deserunt natus molestiae fugiat dolore veritatis fugit non nisi perspiciatis nihil in accusantium harum quod quidem temporibus!</p>
+		</section>	
 
-	  		<aside class="grid_4">
-		  		<ul>
-		  			<li><a href="">side</a></li>
-		  			<li><a href="">side</a></li>
-		  			<li><a href="">side</a></li>
-		  		</ul>
-	  		</aside>
+		<section class="grid_4">
+			<h3>Section B</h3>
 
-	  		<footer class="grid_12">
-	  			<p>copyright &#169; 2014</p>
-	  		</footer>
+			<img src="http://placehold.it/200x150" alt="sample">
+			
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, distinctio, eos placeat mollitia deserunt natus molestiae fugiat dolore veritatis fugit non nisi perspiciatis nihil in accusantium harum quod quidem temporibus!</p>
+		</section>	
+	
+		<aside class="grid_4 omega">
+			<h3>Aside</h3>
+			<img src="http://placehold.it/200x150" alt="sample">
+			<ul>
+		  		<li><a href="#">Aside Link A</a></li>
+		  		<li><a href="#">Aside Link B</a></li>
+		  		<li><a href="#">Aside Link C</a></li>
+			</ul>	
+		</aside>
 
-	  	</article>
-  </div>
+	</article>
+
+	<footer class="grid_12">
+		<p>Copyright  &#169; 2014</p>
+	</footer>
+	
+	<div class="clear"></div>
+	
+</div>
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
