--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<article class="grid_12">
 		
 		<section class="grid_4 alpha">
-			<h3>Section A</h3>
+			<h3>&#10022; Section A</h3>
 			
 			<p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </em></p>
 
@@ -39,19 +39,27 @@
 		</section>	
 
 		<section class="grid_4">
-			<h3>Section B</h3>
+			<h3>&#10022; Section B</h3>
 
+			<img src="http://placehold.it/200x150" alt="sample">
+			<img src="http://placehold.it/200x150" alt="sample">
 			<img src="http://placehold.it/200x150" alt="sample">
 			
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, distinctio, eos placeat mollitia deserunt natus molestiae fugiat dolore veritatis fugit non nisi perspiciatis nihil in accusantium harum quod quidem temporibus!</p>
 		</section>	
 	
 		<aside class="grid_4 omega">
-			<h3>Aside</h3>
+			<h3>&#10022; Aside</h3>
 			<img src="http://placehold.it/200x150" alt="sample">
 			<ul>
 		  		<li><a href="#">Aside Link A</a></li>
-		  		<li><a href="#">Aside Link B</a></li>
+		  		<li><a href="#">Aside Link B</a>
+		  			<ul>
+				  		<li><a href="#">Aside Link A</a></li>
+				  		<li><a href="#">Aside Link B</a></li>
+				  		<li><a href="#">Aside Link C</a></li>
+					</ul>
+		  		</li>
 		  		<li><a href="#">Aside Link C</a></li>
 			</ul>	
 		</aside>
